--- a/aula-04-2023-05-05/exemplos/exemplo01.html
+++ b/aula-04-2023-05-05/exemplos/exemplo01.html
@@ -3,12 +3,50 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Título do documento</title>
+    <title>Tabela</title>
 </head>
 
 <body>
-    <h1 style="color: blue;">CSS</h1>
-    <p style="font-size: 50px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, quasi molestiae? Tenetur voluptatibus dolor officiis laudantium quae aliquam cumque quia quod. Animi nostrum doloremque cupiditate quas harum natus inventore laboriosam.</h1>
+    <table>
+        <thead>
+          <th>Empresa</th>
+          <th>Contato</th>
+          <th>País</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Alfreds Futterkiste</td>
+                <td>Maria Anders</td>
+                <td>Germany</td>
+            </tr>
+            <tr>
+                <td>Centro comercial Moctezuma</td>
+                <td>Francisco Chang</td>
+                <td>Mexico</td>
+            </tr>
+            <tr>
+                <td>Ernst Handel</td>
+                <td>Roland Mendel</td>
+                <td>Austria</td>
+            </tr>
+            <tr>
+                <td>Island Trading</td>
+                <td>Helen Bennett</td>
+                <td>UK</td>
+            </tr>
+            <tr>
+                <td>Laughing Bacchus Winecellars</td>
+                <td>Yoshi Tannamuri</td>
+                <td>Canada</td>
+            </tr>
+            <tr>
+                <td>Magazzini Alimentari Riuniti</td>
+                <td>Giovanni Rovelli</td>
+                <td>Italy</td>
+            </tr>
+        </tbody>
+
+      </table>
 </body>
 
 </html>
