--- a/aula-30-2023-06-13/exercicios/exercicio01/index.html
+++ b/aula-30-2023-06-13/exercicios/exercicio01/index.html
@@ -20,6 +20,7 @@
         voluptatem itaque!
     </p>
     <button type="button" onclick="carregarEstilo()">Carregar Estilo</button>
+    <button type="button" onclick="autoContraste()">Dark Mode</button>
 </body>
 
 </html>
