--- a/aula-37-2023-06-22/exercicios/exercicio01/index.html
+++ b/aula-37-2023-06-22/exercicios/exercicio01/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Posts</title>
+    <title>Notícias</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
         Esportes
       </div>
       <div class="button">
-        <div class="text-button">Nova Notícia</div>
+        <div class="text-button" onclick="novaNoticia()">Nova Notícia</div>
       </div>
     </div>    
     <div id="content">
