--- a/aula-43-2023-06-30/live-code/exemplo01/index.html
+++ b/aula-43-2023-06-30/live-code/exemplo01/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <script src="app.js"></script>
+    <script src="js/app.js" defer></script>
 </head>
 <body>
     <div id="conteudo">
