chore: aula 37 solution

--- a/aula-37-2023-06-22/exercicios/exercicio01/html/noticia/editar.html
+++ b/aula-37-2023-06-22/exercicios/exercicio01/html/noticia/editar.html
@@ -3,26 +3,26 @@
     <title>Notícias</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet" />
-    <script src="js/cadastrar.js" defer></script>
+    <link href="../../css/style.css" rel="stylesheet" />
+    <script src="../../js/noticia/editar.js" defer></script>
   </head>
   <body>
     <div id="header">
       <div id="logo">
-        <img src="images/image 1.png"/>
+        <img src="../../images/image 1.png"/>
       </div>
       <div id="page-title">
         Esportes
       </div>
       <div class="voltar-button">
-        <a href="index.html">Voltar</a>
+        <a href="../../index.html">Voltar</a>
       </div>
     </div>    
     <div id="content">
         <div class="modal-content">
           <form id="formulario" class="form-card" novalidate>
             <section>
-              <h1 class="title">Novo post</h1>
+              <h1 class="title">Editar post</h1>
             </section>
             <section>
               <label for="titulo">Título</label>
@@ -30,7 +30,8 @@
             </section>
             <section>
               <label for="autor">Autor</label>
-              <input id="autor" name="autor" class="input input-default">
+              <select id="autor" name="autor" class="input input-default">
+              </select>
             </section>
             <section>
               <label for="imagem">Imagem</label>
