--- a/aula-37-2023-06-22/exercicios/exercicio01/index.html
+++ b/aula-37-2023-06-22/exercicios/exercicio01/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet" />
-    <script src="js/app.js" defer></script>
+    <script src="js/noticia/app.js" defer></script>
   </head>
   <body>
     <div id="header">
