--- a/aula-37-2023-06-22/exercicios/exercicio01/html/autor/index.html
+++ b/aula-37-2023-06-22/exercicios/exercicio01/html/autor/index.html
@@ -3,27 +3,27 @@
     <title>Notícias</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet" />
-    <script src="js/noticia/app.js" defer></script>
+    <link href="../../css/style.css" rel="stylesheet" />
+    <script src="../../js/autor/app.js" defer></script>
   </head>
   <body>
     <div id="header">
       <div id="logo">
-        <img src="images/image 1.png"/>
+        <img src="../../images/image 1.png"/>
       </div>
       <div id="page-title">
-        Esportes
-      </div>
+        Autores
+      </div>      
       <div class="buttons">        
         <div class="voltar-button">
-          <a href="html/autor/index.html">Autores</a>
+          <a href="../../index.html">Voltar</a>
         </div>
         <div class="button">
-          <div class="text-button" onclick="novaNoticia()">Nova Notícia</div>
+          <div class="text-button" onclick="novoAutor()">Novo Autor</div>
         </div>
       </div>
     </div>    
-    <div id="content">
+    <div id="content-autor">
     </div>
   </body>
 </html>
