--- a/aula-37-2023-06-22/exercicios/exercicio01/html/noticia/cadastrar.html
+++ b/aula-37-2023-06-22/exercicios/exercicio01/html/noticia/cadastrar.html
@@ -12,7 +12,7 @@
         <img src="../../images/image 1.png"/>
       </div>
       <div id="page-title">
-        Esportes
+        Nova Notícia
       </div>
       <div class="voltar-button">
         <a href="../../index.html">Voltar</a>
@@ -21,9 +21,6 @@
     <div id="content">
         <div class="modal-content">
           <form id="formulario" class="form-card" novalidate>
-            <section>
-              <h1 class="title">Novo post</h1>
-            </section>
             <section>
               <label for="titulo">Título</label>
               <input id="titulo" name="titulo" class="input input-default">
