chore: aula 37 solution

--- a/aula-37-2023-06-22/exercicios/exercicio01/index.html
+++ b/aula-37-2023-06-22/exercicios/exercicio01/index.html
@@ -22,7 +22,10 @@
           <div class="text-button" onclick="novaNoticia()">Nova Notícia</div>
         </div>
       </div>
-    </div>    
+    </div>   
+    <div>
+      <input id="pesquisa" />
+    </div>
     <div id="content">
     </div>
   </body>
