feat: add example aula 9

--- a/aula-09-2023-05-12/exemplos/exemplo03/index.html
+++ b/aula-09-2023-05-12/exemplos/exemplo03/index.html
@@ -13,5 +13,9 @@
         <div class="filha2">
         </div>
     </div>
+    <div class="pai">
+        <div class="filha3">
+        </div>
+    </div>
 </body>
 </html>
